force-app/main/default/objects/Test_object__c/fields/New_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Text_Field__c</fullName>
    <label>New Text Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>