force-app/main/default/objects/Test_object__c/fields/Test_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Test_Picklist__c</fullName>
    <label>Test Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acc1</fullName>
            </value>
            <value>
                <fullName>Acc2</fullName>
            </value>
            <value>
                <fullName>Acc3</fullName>
            </value>
            <value>
                <fullName>Acc4</fullName>
            </value>
            <value>
                <fullName>Acc5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>